# nexusmail-service

./: .env.example  .gitignore  Dockerfile  README.md  instructions.md  nexusmail.skill  pyproject.toml
app/: config.py  main.py  models.py
app/routers/: email.py
app/services/: acevane.py  cleaner.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: conftest.py  test_acevane.py  test_cleaner.py  test_email_router.py  test_health.py
